--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	<script src="js/bootstrap.bundle.min.js"></script>
+	<link rel="stylesheet" href="css/custome.css">
 
 </head>
 
