home page hero section about section and carousel added

--- a/index.html
+++ b/index.html
@@ -307,12 +307,12 @@
 					<div class="bg_back w-100  position-absolute center_ht"></div>
 
 					<div class="carousel-inner carousel-height">
-						<div class="carousel-item active">
+						<!-- <div class="carousel-item active">
 							<img src="img/1photo.jpg" class="d-block w-100 img-ra" alt="...">
 							<div class="center_hm1 position-absolute">
 								<img src="img/43photo.png" alt="abc">
 							</div>
-							<div class="carousel-caption carousel-caption1 d-md-block">
+							<div class="carousel-caption carousel-caption1 d-md-block display-mobile-none">
 								<h1 class="text-white text-uppercase font_50">God give us power to believe</h1>
 								<p class="mt-3 text-light">Ac mi duis mollis. Sapiente? Scelerisque quae, penatibus?
 									Suscipit class corporis nostra rem quos voluptatibus habitant? Fames, vivamus minim
@@ -324,25 +324,23 @@
 												class="fa fa-arrow-right ms-1"></i></a></li>
 								</ul>
 							</div>
-						</div>
-						<div class="carousel-item">
+						</div> -->
+						<div class="carousel-item active">
 							<img src="img/2photo.jpg" class="d-block w-100 img-ra" alt="...">
 							<div class="center_hm1 position-absolute">
 								<img src="img/43photo.png" alt="abc">
 							</div>
 
-							<!-- <div class="carousel-caption carousel-caption2 d-md-block">
-								<h1 class="text-white text-uppercase font_50">alias veritatis nostrum iste sed </h1>
-								<p class="mt-3 text-light">Ac mi duis mollis. Sapiente? Scelerisque quae, penatibus?
-									Suscipit class corporis nostra rem quos voluptatibus habitant? Fames, vivamus minim
-									nemo enim, gravida lobortis quasi, eum.</p>
+							<div class="carousel-caption carousel-caption2 d-md-block display-mobile-none">
+								<h1 class="text-white text-uppercase font_50">श्रद्धा का प्रतीक, सेवा का संकल्प – श्री श्याम धाम  </h1>
+								<p class="mt-3 text-light">श्रद्धा, सेवा और समर्पण से सजे श्याम बाबा के पावन धाम का परिचय</p>
 								<ul class="mb-0 mt-4">
-									<li class="d-inline-block"><a class="button_2" href="#">Buy Now <i
-												class="fa fa-arrow-right ms-1"></i></a></li>
-									<li class="d-inline-block ms-3"><a class="button_3" href="#">Live Stream <i
+									<!-- <li class="d-inline-block"><a class="button_2" href="#">Buy Now <i
+												class="fa fa-arrow-right ms-1"></i></a></li> -->
+									<li class="d-inline-block ms-3"><a class="button_3" href="#">लाइव दर्शन <i
 												class="fa fa-arrow-right ms-1"></i></a></li>
 								</ul>
-							</div> -->
+							</div>
 						</div>
 						<div class="carousel-item">
 							<img src="img/3photo.jpg" class="d-block w-100 img-ra" alt="...">
@@ -382,41 +380,39 @@
 		<section id="watch" class="p_4 pt-0">
 		<div class="container-xl">
 			<div class="donate_1 row text-center mb-5">
-				<div class="col-md-12">
+				<!-- <div class="col-md-12">
 					<h5 class="col_oran fs-6 mt-3">+ WATCH VIDEO +</h5>
 					<h1 class="mb-0 font_50 mt-3">Our Live Broadcast</h1>
-				</div>
+				</div> -->
 			</div>
 			<div class="watch_1 row">
-				<div class="col-md-6 pe-0">
+				<div class="col-md-4 pe-0">
 					<div class="watch_1l position-relative">
 						<div class="watch_1l1">
 							<div class="grid clearfix">
 								<figure class="effect-jazz mb-0">
-									<a href="#"><img src="img/8.jpg" class="w-100" alt="img25"></a>
+									<a href="#"><img src="img/1photo.jpg" class="w-100" alt="img25"></a>
 								</figure>
 							</div>
 						</div>
-						<div class="watch_1l2 position-absolute text-center top-0 w-100 h-100 bg_back">
+						<!-- <div class="watch_1l2 position-absolute text-center top-0 w-100 h-100 bg_back">
 							<span><a class="d-inline-block bg_oran text-white text-center hvr-grow" href="#"><i
 										class="fa fa-play"></i></a></span>
-						</div>
+						</div> -->
 					</div>
 				</div>
-				<div class="col-md-6 ps-0">
+				<div class="col-md-8 ps-0">
 					<div class="watch_1r">
-						<h6 class="col_oran">
-							October 9, 2021</h6>
-						<h2 class="mt-3 mb-3">When our power of choice</h2>
-						<p class="mb-0">We are a Temple that belives in Krishna and the followers and We are a Temple
-							that belives in Krishna. This is where you should start Lorem ipsum dolor sit amet
-							consectetur adipisicing elit, sed do eiusmod Lorem ipsum dolor sit amet consectetur
-							adipisicing elit, sed do eiusmod This is where you should start Lorem ipsum dolor sit amet
-							consectetur</p>
+						<h1 class="col_oran">
+							श्री श्याम मंदिर, सूरत - एक परिचय</h1>
+						<h5 class="mt-3 mb-3">श्रद्धा, सेवा और समर्पण से सजे श्याम बाबा के पावन धाम का परिचय</h5>
+						<p class="mb-0">श्री श्याम मंदिर, सूरत, न केवल एक धार्मिक स्थल है बल्कि भक्ति, सेवा और आस्था का जीवंत प्रतीक है। वर्ष 2011 में प्रारंभ हुए इस मंदिर के निर्माण कार्य को 2021 में भक्तों की अटूट श्रद्धा और समर्पण के साथ पूर्ण किया गया। यहां हर दिन हजारों श्रद्धालु प्रभु श्याम के दर्शन करते हैं, बाबा श्याम का गुणगान करते है, और आध्यात्मिक शांति और समृद्धि का अनुभव करते हैं। <br>
+
+यह पावन धाम खाटू श्याम जी व सालासर बालाजी की अखंड ज्योति से प्रकाशित है, जिसे पदयात्रा के माध्यम से सूरत लाया गया। साथ ही त्र्यंबकेश्वर ज्योतिर्लिंग से लाई गई ज्योति भी यहाँ प्रज्वलित है। इस मंदिर में नित्य पूजा, सेवा कार्य, रक्तदान शिविर और भागवत कथाएँ एवं सामाजिक व धार्मिक कार्यकर्म किये जाते है | जो समाज और आध्यात्मिक जीवन को एक नई दिशा देते हैं।</p>
 					</div>
 				</div>
 			</div>
-			<div class="watch_2 row mt-5">
+			<!-- <div class="watch_2 row mt-5">
 				<div class="col-md-3 col-sm-6">
 					<div class="watch_2m">
 						<div class="watch_2l position-relative">
@@ -497,9 +493,225 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 		</div>
 	</section>
+
+
+
+
+
+
+<div class="container mt-5">
+  <div class="carousel-container">
+    <button class="carousel-btn prev-btn">&#10094;</button>
+    <div class="carousel-track">
+      <div class="card">
+         <img src="img/1photo.jpg" class="card-img-top">
+         <div class="card-body text-center">
+           <h5>Year 2021</h5>
+           <p>Description 2021</p>
+         </div>
+      </div>
+      <div class="card">
+         <img src="img/2photo.jpg" class="card-img-top">
+         <div class="card-body text-center">
+           <h5>Year 2022</h5>
+           <p>Description 2021</p>
+         </div>
+      </div>
+      <div class="card">
+         <img src="img/3photo.jpg" class="card-img-top">
+         <div class="card-body text-center">
+           <h5>Year 2023</h5>
+           <p>Description 2021</p>
+         </div>
+      </div>
+      <div class="card">
+         <img src="img/1photo.jpg" class="card-img-top">
+         <div class="card-body text-center">
+           <h5>Year 2024</h5>
+           <p>Description 2021</p>
+         </div>
+      </div>
+      <div class="card">
+         <img src="img/2photo.jpg" class="card-img-top">
+         <div class="card-body text-center">
+           <h5>Year 2025</h5>
+           <p>Description 2021</p>
+         </div>
+      </div>
+    </div>
+    <button class="carousel-btn next-btn">&#10095;</button>
+  </div>
+</div>
+
+<script>
+const track = document.querySelector('.carousel-track');
+let cards = Array.from(track.children);
+const prevBtn = document.querySelector('.prev-btn');
+const nextBtn = document.querySelector('.next-btn');
+
+let visibleCards = window.innerWidth <= 768 ? 1 : 2; // responsive
+let index = visibleCards; // start after clones
+
+// Clone last few cards to start & first few cards to end
+for(let i = cards.length - visibleCards; i < cards.length; i++){
+    const clone = cards[i].cloneNode(true);
+    track.insertBefore(clone, track.firstChild);
+}
+for(let i = 0; i < visibleCards; i++){
+    const clone = cards[i].cloneNode(true);
+    track.appendChild(clone);
+}
+
+// Update cards after cloning
+cards = Array.from(track.children);
+
+// Calculate card width dynamically
+function getCardWidth(){
+    return cards[0].offsetWidth + 20; // 20 = margin
+}
+
+track.style.transform = `translateX(${-index * getCardWidth()}px)`;
+
+// Move functions
+function updateCarousel(){
+    track.style.transform = `translateX(${-index * getCardWidth()}px)`;
+}
+
+function moveRight(){
+    index++;
+    track.style.transition = 'transform 0.5s ease-in-out';
+    updateCarousel();
+}
+function moveLeft(){
+    index--;
+    track.style.transition = 'transform 0.5s ease-in-out';
+    updateCarousel();
+}
+
+// Click events
+nextBtn.addEventListener('click', moveRight);
+prevBtn.addEventListener('click', moveLeft);
+
+// Auto rotate right every 3 sec
+let auto = setInterval(moveRight, 3000);
+
+// Reset interval on manual click
+function resetInterval(){
+    clearInterval(auto);
+    auto = setInterval(moveRight, 3000);
+}
+nextBtn.addEventListener('click', resetInterval);
+prevBtn.addEventListener('click', resetInterval);
+
+// Infinite loop adjustments
+track.addEventListener('transitionend', () => {
+    const cardWidth = getCardWidth();
+    if(index >= cards.length - visibleCards){
+        index = visibleCards; // reset to first real card
+        track.style.transition = 'none';
+        updateCarousel();
+        void track.offsetWidth;
+        track.style.transition = 'transform 0.5s ease-in-out';
+    }
+    if(index < visibleCards){
+        index = cards.length - visibleCards*2; // last real card
+        track.style.transition = 'none';
+        updateCarousel();
+        void track.offsetWidth;
+        track.style.transition = 'transform 0.5s ease-in-out';
+    }
+});
+
+// Update visibleCards and cardWidth on resize
+window.addEventListener('resize', () => {
+    visibleCards = window.innerWidth <= 768 ? 1 : 2;
+    updateCarousel();
+});
+</script>
+
+
+
+
+		<section id="watch" class="p_4 pt-0">
+		<div class="container-xl">
+			<div class="donate_1 row text-center mb-5">
+				<!-- <div class="col-md-12">
+					<h5 class="col_oran fs-6 mt-3">+ WATCH VIDEO +</h5>
+					<h1 class="mb-0 font_50 mt-3">Our Live Broadcast</h1>
+				</div> -->
+			</div>
+			<div class="watch_1 row">
+					<div class="col-md-8 ps-0">
+					<div class="watch_1r">
+						<h1 class="col_oran">
+							श्री श्याम बाबा का गौरवगाथा</h1>
+						<h5 class="mt-3 mb-3">कलियुग के देवता, जिनका शीश कभी झुका नहीं</h5>
+						<p class="mb-0">महाभारत के महान योद्धा बर्बरीक, युद्ध में केवल हारने वाले पक्ष की ओर से लड़ने के वचन के कारण भगवान श्रीकृष्ण ने उनसे उनका शीश माँगा। बर्बरीक ने बिना संकोच अपने शीश का बलिदान दे दिया।भगवान श्रीकृष्ण ने उन्हें वरदान दिया कि कलियुग में वे उन्ही के रूप में “श्याम बाबा” नाम से पूजे जाएंगे। आज खाटूधाम में स्थित मंदिर में उनका शीश विराजित है, जहाँ लाखों भक्त उनकी आराधना में लीन होकर मनोकामना करते हैं। श्याम बाबा आज भी भक्तों की करुण पुकार सुनते हैं।
+							 <br>
+							 <br>
+
+श्री श्याम बाबा को कलियुग के जीवंत देवता व हारे का सहारा माना जाता है, जिनकी आराधना से हर समस्या का समाधान संभव है। उनकी कृपा से असंभव भी संभव हो जाता है। भक्त मानते हैं कि एक बार सच्चे मन से “जय श्री श्याम” पुकारने पर बाबा उनके दुख हर लेते हैं। खाटू श्यामजी के मंदिर में फागुन की शुक्ल पक्ष एकादशी को फाल्गुन मेले में लाखों श्रद्धालु दर्शन के लिए पहुँचते हैं।</p>
+					</div>
+				</div>
+				<div class="col-md-4 pe-0">
+					<div class="watch_1l position-relative">
+						<div class="watch_1l1">
+							<div class="grid clearfix">
+								<figure class="effect-jazz mb-0">
+									<a href="#"><img src="img/8photo.png" class="w-100 " style="height: 45vh;" alt="img25"></a>
+								</figure>
+							</div>
+						</div>
+						<!-- <div class="watch_1l2 position-absolute text-center top-0 w-100  bg_back">
+							<span><a class="d-inline-block bg_oran text-white text-center hvr-grow" href="#"><i
+										class="fa fa-play"></i></a></span>
+						</div> -->
+					</div>
+				</div>
+			
+			</div>
+		
+		</div>
+	</section>
+	<section id="bhajan" class=" ">
+  <div class="container-xl ">
+    <div class="row align-items-center">
+
+      <!-- LEFT IMAGE -->
+      <div class="col-lg-5 col-md-6 mb-4 mb-md-0">
+        <img 
+          src="img/9photo.png" 
+          alt="Bhajan Instruments" 
+          class="img-fluid rounded "
+        >
+      </div>
+
+      <!-- RIGHT CONTENT -->
+      <div class="col-lg-7 col-md-6">
+        <h2 class="text-warning fw-bold mb-3">भजन संग्रह</h2>
+        <h5 class="text-light mb-3">भक्ति में रमा एक संगीतमय यात्रा</h5>
+
+        <p class="text-light">
+          श्री श्याम बाबा के भजनों का यह संग्रह भक्तों को आध्यात्मिक अनुभव प्रदान करता है।
+          इसमें बाबा की महिमा, लीला और भक्तों की श्रद्धा को संगीतमय रूप में प्रस्तुत किया गया है।
+          यह भजन संग्रह न केवल मन को शांत करता है, बल्कि भक्तों को बाबा से अधिक रूप से जोड़ने
+          का माध्यम भी बनता है।
+          <br><br>
+          चाहे मंदिर में हो या घर पर, ये भजन हर जगह बाबा की उपस्थिति का अनुभव कराते हैं।
+        </p>
+
+        <a href="#" class="btn btn-warning px-4 py-2 mt-2">
+          और भजन देखें
+        </a>
+      </div>
+
+    </div>
+  </div>
+</section>
+
 	<section id="about_h" class="p_4">
 		<div class="container-xl">
 			<div class="row about_h1">
@@ -1850,7 +2062,8 @@
 
 
 
-	<script src="js/common.js"></script>
+
+
 
 
 </body>
