--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
 </head>
 
 <body>
+	<!-- Popup HTML: Add anywhere in your home page -->
+<div id="homePopup" class="popup-overlay">
+  <div class="popup-content">
+    <span class="popup-close bg-light">&times;</span>
+    <img src="img/2photo.jpg" alt="Popup Image" class="popup-image">
+    <p>श्रद्धा का प्रतीक, सेवा का संकल्प – श्री श्याम धाम सूरत . </p>
+  </div>
+</div>
+
 	<div class="main position-relative">
 		<div class="main_1 position-absolute top-0 w-100">
 			<section id="top" class="pt-3 pb-3 bg-theme2">
@@ -306,7 +315,7 @@
 					</div>
 					<div class="bg_back w-100  position-absolute center_ht"></div>
 
-					<div class="carousel-inner carousel-height">
+					<div class="carousel-inner carousel-height" >
 						<!-- <div class="carousel-item active">
 							<img src="img/1photo.jpg" class="d-block w-100 img-ra" alt="...">
 							<div class="center_hm1 position-absolute">
@@ -377,16 +386,27 @@
 		</div>
 	</div>
 
-		<section id="watch" class="p_4 pt-0">
+		<section id="watch" class="p_4 pt-0" style="background-color: #FAF7ED;">
 		<div class="container-xl">
-			<div class="donate_1 row text-center mb-5">
+			<div class="donate_1 row text-center margin-ra">
 				<!-- <div class="col-md-12">
 					<h5 class="col_oran fs-6 mt-3">+ WATCH VIDEO +</h5>
 					<h1 class="mb-0 font_50 mt-3">Our Live Broadcast</h1>
 				</div> -->
 			</div>
 			<div class="watch_1 row">
-				<div class="col-md-4 pe-0">
+			
+				<div class="col-md-8 ps-0" style="background-color: beige;">
+					<div class="watch_1r" style="background-color: beige;">
+						<h1 class="col_oran">
+							श्री श्याम मंदिर, सूरत - एक परिचय</h1>
+						<h5 class="mt-3 mb-3">श्रद्धा, सेवा और समर्पण से सजे श्याम बाबा के पावन धाम का परिचय</h5>
+						<p class="mb-0">श्री श्याम मंदिर, सूरत, न केवल एक धार्मिक स्थल है बल्कि भक्ति, सेवा और आस्था का जीवंत प्रतीक है। वर्ष 2011 में प्रारंभ हुए इस मंदिर के निर्माण कार्य को 2021 में भक्तों की अटूट श्रद्धा और समर्पण के साथ पूर्ण किया गया। यहां हर दिन हजारों श्रद्धालु प्रभु श्याम के दर्शन करते हैं, बाबा श्याम का गुणगान करते है, और आध्यात्मिक शांति और समृद्धि का अनुभव करते हैं। <br>
+
+यह पावन धाम खाटू श्याम जी व सालासर बालाजी की अखंड ज्योति से प्रकाशित है, जिसे पदयात्रा के माध्यम से सूरत लाया गया। साथ ही त्र्यंबकेश्वर ज्योतिर्लिंग से लाई गई ज्योति भी यहाँ प्रज्वलित है। इस मंदिर में नित्य पूजा, सेवा कार्य, रक्तदान शिविर और भागवत कथाएँ एवं सामाजिक व धार्मिक कार्यकर्म किये जाते है | जो समाज और आध्यात्मिक जीवन को एक नई दिशा देते हैं।</p>
+					</div>
+				</div>
+					<div class="col-md-4 pe-0">
 					<div class="watch_1l position-relative">
 						<div class="watch_1l1">
 							<div class="grid clearfix">
@@ -399,16 +419,6 @@
 							<span><a class="d-inline-block bg_oran text-white text-center hvr-grow" href="#"><i
 										class="fa fa-play"></i></a></span>
 						</div> -->
-					</div>
-				</div>
-				<div class="col-md-8 ps-0">
-					<div class="watch_1r">
-						<h1 class="col_oran">
-							श्री श्याम मंदिर, सूरत - एक परिचय</h1>
-						<h5 class="mt-3 mb-3">श्रद्धा, सेवा और समर्पण से सजे श्याम बाबा के पावन धाम का परिचय</h5>
-						<p class="mb-0">श्री श्याम मंदिर, सूरत, न केवल एक धार्मिक स्थल है बल्कि भक्ति, सेवा और आस्था का जीवंत प्रतीक है। वर्ष 2011 में प्रारंभ हुए इस मंदिर के निर्माण कार्य को 2021 में भक्तों की अटूट श्रद्धा और समर्पण के साथ पूर्ण किया गया। यहां हर दिन हजारों श्रद्धालु प्रभु श्याम के दर्शन करते हैं, बाबा श्याम का गुणगान करते है, और आध्यात्मिक शांति और समृद्धि का अनुभव करते हैं। <br>
-
-यह पावन धाम खाटू श्याम जी व सालासर बालाजी की अखंड ज्योति से प्रकाशित है, जिसे पदयात्रा के माध्यम से सूरत लाया गया। साथ ही त्र्यंबकेश्वर ज्योतिर्लिंग से लाई गई ज्योति भी यहाँ प्रज्वलित है। इस मंदिर में नित्य पूजा, सेवा कार्य, रक्तदान शिविर और भागवत कथाएँ एवं सामाजिक व धार्मिक कार्यकर्म किये जाते है | जो समाज और आध्यात्मिक जीवन को एक नई दिशा देते हैं।</p>
 					</div>
 				</div>
 			</div>
@@ -2060,7 +2070,19 @@ window.addEventListener('resize', () => {
 		</div>
 	</div>
 
+<script>
+	// Show popup on page load
+window.addEventListener('load', () => {
+  const popup = document.getElementById('homePopup');
+  popup.style.display = 'flex'; // show popup
 
+  // Close button click
+  const closeBtn = popup.querySelector('.popup-close');
+  closeBtn.addEventListener('click', () => {
+    popup.style.display = 'none';
+  });
+});
+</script>
 
 
 
