un use part comment

--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@ window.addEventListener('resize', () => {
       </div>
 
       <!-- RIGHT CONTENT -->
-      <div class="col-lg-7 col-md-6">
+      <div class="col-lg-7 col-md-6 mb-5">
         <h2 class="text-warning fw-bold mb-3">भजन संग्रह</h2>
         <h5 class="text-light mb-3">भक्ति में रमा एक संगीतमय यात्रा</h5>
 
@@ -722,7 +722,7 @@ window.addEventListener('resize', () => {
   </div>
 </section>
 
-	<section id="about_h" class="p_4">
+	<!-- <section id="about_h" class="p_4">
 		<div class="container-xl">
 			<div class="row about_h1">
 				<div class="col-md-4">
@@ -1865,7 +1865,7 @@ window.addEventListener('resize', () => {
 			</div>
 		</div>
 
-	</section>
+	</section> -->
 
 	<div class="footer_m position-relative">
 		<div class="footer_m1">
