background color changes test

--- a/index.html
+++ b/index.html
@@ -645,8 +645,8 @@ window.addEventListener('resize', () => {
 
 
 
-		<section id="watch" class="p_4 pt-0">
-		<div class="container-xl">
+		<section id="watch" class="p_4 pt-0" style="background-color: #FAF7ED;">
+		<div class="container-xl" >
 			<div class="donate_1 row text-center mb-5">
 				<!-- <div class="col-md-12">
 					<h5 class="col_oran fs-6 mt-3">+ WATCH VIDEO +</h5>
@@ -654,8 +654,8 @@ window.addEventListener('resize', () => {
 				</div> -->
 			</div>
 			<div class="watch_1 row">
-					<div class="col-md-8 ps-0">
-					<div class="watch_1r">
+					<div class="col-md-8 ps-0" style="background-color: beige;">
+					<div class="watch_1r" style="background-color: beige;">
 						<h1 class="col_oran">
 							श्री श्याम बाबा का गौरवगाथा</h1>
 						<h5 class="mt-3 mb-3">कलियुग के देवता, जिनका शीश कभी झुका नहीं</h5>
